--- a/l10n/po/ja_JP/quarkus2.md.po
+++ b/l10n/po/ja_JP/quarkus2.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 21:08+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/quarkus2.md:1
@@ -32,10 +32,10 @@ msgstr ""
 #: upstream/quarkus2.md:1
 #, no-wrap
 msgid "Quarkus 2.0 continues the mission of making Java the preferred framework for Kubernetes-native development with new developer tools and improved performance."
-msgstr ""
+msgstr "Quarkus 2.0は、新しい開発者ツールと改善されたパフォーマンスにより、JavaをKubernetesネイティブ開発に適したフレームワークにするという使命を継続します。"
 
 #. type: YAML Front Matter: title
 #: upstream/quarkus2.md:1
 #, no-wrap
 msgid "Proven Java for the Cloud"
-msgstr ""
+msgstr "クラウド向けの実証済み Java"
