--- a/l10n/po/ja_JP/security.md.po
+++ b/l10n/po/ja_JP/security.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 21:16+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/security.md:1
@@ -32,25 +32,25 @@ msgstr ""
 #: upstream/security.md:1
 #, no-wrap
 msgid "The Quarkus team and community take all security bugs very seriously. You can find our guidelines here regarding our policy and security disclosure."
-msgstr ""
+msgstr "Quarkusのチームとコミュニティは、すべてのセキュリティーバグを非常に深刻に受け止めています。ポリシーとセキュリティー開示に関するQuarkusのガイドラインはこちらをご覧ください。"
 
 #. type: YAML Front Matter: title
 #: upstream/security.md:1
 #, no-wrap
 msgid "Security"
-msgstr ""
+msgstr "セキュリティ"
 
 #. type: Title ##
 #: upstream/security.md:9
 #, no-wrap
 msgid "Reporting security issues"
-msgstr ""
+msgstr "セキュリティー問題の報告"
 
 #. type: Plain text
 #: upstream/security.md:12
 #, no-wrap
 msgid "Please report any security issues you find in Quarkus to:\n"
-msgstr ""
+msgstr "Quarkusで見つけたセキュリティー問題を次の場所に報告してください:\n"
 
 #. type: Plain text
 #: upstream/security.md:14
@@ -62,43 +62,43 @@ msgstr ""
 #: upstream/security.md:16
 #, no-wrap
 msgid "Anyone can post to this list. The subscribers are only trusted individuals from the Quarkus community who will handle the resolution of any reported security issues in confidence. In your report, please note how you would like to be credited for discovering the issue and the details of any embargo you would like to impose. Currently the security response teams for the following distributions are subscribed to this list and will respond to your report: [Red Hat](https://access.redhat.com/security/team/contact/)\n"
-msgstr ""
+msgstr "誰でもこのリストに投稿できます。 購読者は、報告されたセキュリティ問題の解決を自信を持って処理するQuarkusコミュニティの信頼できる担当者のみです。 レポートでは、問題を発見したことでどのようにクレジットされるか、および課したいエンバーゴ措置の詳細を記してください。 現在、次のディストリビューションのセキュリティ対応チームがこのリストに登録されており、レポートに対応します：[Red Hat](https://access.redhat.com/security/team/contact/)\n"
 
 #. type: Title ###
 #: upstream/security.md:17
 #, no-wrap
 msgid "Ecosystem"
-msgstr ""
+msgstr "エコシステム"
 
 #. type: Plain text
 #: upstream/security.md:20
 #, no-wrap
 msgid "Quarkus is an ecosystem made from many extensions and many libraries (like Eclipse Vert.x, Hibernate, Apache Camel and more), most of them not under the direct responsibility of the Quarkus team. If you find a security bug possibly rooted in one of these libraries, you can either disclose to them directly or disclose them to the Quarkus team (following this process) and we will responsibly disclose the issue to the respective extension or library maintainer.\n"
-msgstr ""
+msgstr "Quarkusは、多くのエクステンションと多くのライブラリ（Eclipse Vert.x、Hibernate、Apache Camelなど）からなるエコシステムであり、そのほとんどはQuarkusチームの直接の責任下にはありません。これらのライブラリに根ざしている可能性のあるセキュリティバグを見つけた場合は、それらのライブラリに直接開示するか、Quarkusチームに開示することが出来（このプロセスに従ってください）、その場合、責任を持ってそれぞれのエクステンションまたはライブラリのメンテナに開示します。\n"
 
 #. type: Title ###
 #: upstream/security.md:21
 #, no-wrap
 msgid "Why follow this process"
-msgstr ""
+msgstr "このプロセスに従う理由"
 
 #. type: Plain text
 #: upstream/security.md:24
 #, no-wrap
 msgid "Due to the sensitive nature of security bugs, the disclosure process is more constrained than a regular bug. We appreciate you following these industry accepted guidelines, which gives time for a proper fix and limit the time window of attack.\n"
-msgstr ""
+msgstr "セキュリティーバグは機密性が高いため、通常のバグよりも開示プロセスに制約があります。我々は、適切な修正のための時間を与え、攻撃の時間枠を制限する、業界で認められたこれらのガイドラインに従っていただけることに感謝します。\n"
 
 #. type: Title ##
 #: upstream/security.md:25
 #, no-wrap
 msgid "Supported Versions"
-msgstr ""
+msgstr "サポートされているバージョン"
 
 #. type: Plain text
 #: upstream/security.md:28
 #, no-wrap
 msgid "The community will fix security bugs for the latest major.minor version published at [https://quarkus.io/get-started/](https://quarkus.io/get-started/).\n"
-msgstr ""
+msgstr "コミュニティは、[https://quarkus.io/get-started/](https://quarkus.io/get-started/) で公開されている最新のmajor.minorバージョンのセキュリティバグを修正します。\n"
 
 #. type: Plain text
 #: upstream/security.md:29
@@ -128,16 +128,16 @@ msgstr ""
 #: upstream/security.md:35
 #, no-wrap
 msgid "We may fix the vulnerability to older versions depending on the severity of the issue and the age of the release, but we are only committing to the latest version released.\n"
-msgstr ""
+msgstr "問題の深刻度やリリースの経過時間によっては、古いバージョンへの脆弱性を修正する場合がありますが、コミットしているのは、リリースされた最新バージョンのみです。\n"
 
 #. type: Title ##
 #: upstream/security.md:36
 #, no-wrap
 msgid "Handling security issues"
-msgstr ""
+msgstr "セキュリティー問題への対応"
 
 #. type: Plain text
 #: upstream/security.md:38
 #, no-wrap
 msgid "If you represent a Quarkus extension or a Quarkus platform, you are welcome to subscribe to the security at quarkus.io mailing list. Your subscription will only be approved if you can demonstrate that you will handle issues in confidence and properly credit reporters for discovering issues (e.g. experience with embargoe process).\n"
-msgstr ""
+msgstr "QuarkusのエクステンションやQuarkusのプラットフォームを代表している場合は、security at quarkus.ioのメーリングリストを購読することを歓迎します。あなたの購読は、あなたが問題を秘密を守って処理し、問題を発見した報告者を適切にクレジット出来ると証明できる場合にのみ承認されます(例:エンバーゴ処理の経験)。\n"
