--- a/l10n/po/ja_JP/_includes/homepage-features-icon-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-features-icon-band.html.po
@@ -3,81 +3,70 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 01:46+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 21:31+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/homepage-features-icon-band.html:4
-#, fuzzy
 msgid "Quarkus Features"
 msgstr "Quarkusの特徴"
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/homepage-features-icon-band.html:10
-#, fuzzy
 msgid "<a href=\"/container-first\">Container First</a>"
-msgstr "&lt;a href=\"/container-first\"&gt;Container First&lt;/a&gt;となります。"
+msgstr "<a href=\"/container-first\">コンテナ・ファースト</a>"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/homepage-features-icon-band.html:11
-#, fuzzy
 msgid "Quarkus tailors your application for GraalVM and HotSpot. Amazingly fast boot time, incredibly low RSS memory (not just heap size!) offering near instant scale up and high density memory utilization in container orchestration platforms like Kubernetes. We use a technique we call compile time boot."
 msgstr "Quarkusはお客様のアプリケーションをGraalVMとHotSpot用にカスタマイズします。驚くほど速い起動時間、信じられないほど低いRSSメモリ（ヒープサイズだけではありません！）は、Kubernetesのようなコンテナオーケストレーションプラットフォームにおいて、ほぼ瞬時にスケールアップし、高密度のメモリ利用を提供します。私たちはコンパイルタイムブートと呼ばれる技術を使用しています。"
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/homepage-features-icon-band.html:15
-#, fuzzy
 msgid "<a href=\"/continuum\">Unifies imperative and reactive</a>"
-msgstr "&lt;a href=\"/continuum\"&gt;命令型と反応型を統一する&lt;/a&gt;。"
+msgstr "<a href=\"/continuum\">命令型とリアクティブ型の統一</a>"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/homepage-features-icon-band.html:16
-#, fuzzy
 msgid "Combine both the familiar imperative code and the reactive style when developing applications."
-msgstr "慣れ親しんだ命令形のコードとリアクティブなスタイルの両方を組み合わせて、アプリケーションを開発することができます。"
+msgstr "慣れ親しんだ命令型のコードとリアクティブなスタイルの両方を組み合わせて、アプリケーションを開発することができます。"
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/homepage-features-icon-band.html:20
-#, fuzzy
 msgid "<a href=\"/standards\">Community and Standards</a>"
-msgstr "&lt;a href=\"/standards\"&gt;コミュニティとスタンダード&lt;/a"
+msgstr "<a href=\"/standards\">コミュニティと標準規格</a>"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/homepage-features-icon-band.html:21
-#, fuzzy
 msgid "Quarkus provides a cohesive, fun to use, full-stack framework by leveraging a growing list of over fifty best-of-breed libraries that you love and use. All wired on a standard backbone."
-msgstr "Quarkusは、ユーザーが愛用している50以上のベストオブブリードのライブラリを活用することで、まとまりがあり、楽しく使えるフルスタックフレームワークを提供しています。すべてが標準的なバックボーンで構成されています。"
+msgstr "Quarkusは50を超えて拡大している各分野における最高のライブラリを活用することで、良くまとまった、使って楽しいフルスタックフレームワークを提供します。全て、標準のバックボーンに接続されています。"
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/homepage-features-icon-band.html:25
-#, fuzzy
 msgid "<a href=\"/kubernetes-native\">Kube-Native</a>"
-msgstr "&lt;a href=\"/kubernetes-native\"&gt;Kube-Native&lt;/a&gt;（キューブネイティブ）。"
+msgstr "<a href=\"/kubernetes-native\">Kube-Native</a>"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/homepage-features-icon-band.html:26
-#, fuzzy
 msgid "The combination of Quarkus and Kubernetes provides an ideal environment for creating scalable, fast, and lightweight applications. Quarkus significantly increases developer productivity with tooling, pre-built integrations, application services, and more."
 msgstr "QuarkusとKubernetesの組み合わせは、スケーラブルで高速、かつ軽量なアプリケーションを作成するための理想的な環境を提供します。Quarkusは、ツール、事前に構築された統合、アプリケーションサービスなどにより、開発者の生産性を大幅に向上させます。"
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/homepage-features-icon-band.html:30
-#, fuzzy
 msgid "<a href=\"/developer-joy\">Developer Joy</a>"
-msgstr "&lt;a href=\"/developer-joy\"&gt;Developer Joy&lt;/a"
+msgstr "<a href=\"/developer-joy\">開発者満足</a>"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/homepage-features-icon-band.html:31
-#, fuzzy
 msgid "A cohesive platform for optimized developer joy with unified configuration and no hassle native executable generation. Zero config, live reload in the blink of an eye and streamlined code for the 80% common usages, flexible for the remainder 20%."
-msgstr "統一された設定と手間のかからないネイティブな実行ファイルの生成により、開発者の喜びを最適化するための一貫したプラットフォームです。統一された設定と手間のかからないネイティブな実行ファイルの生成により、開発者の喜びを最大限に引き出すことができます。"
+msgstr "統一された設定と手間のかからないネイティブ実行可能ファイル生成により、開発者満足を最適化するための一貫したプラットフォームです。ゼロコンフィグ、瞬く間のライブリロード、80%の一般的な用途には合理的なコード、20%の用途には柔軟なコード。"
