--- a/l10n/po/ja_JP/_includes/homepage-worldtour-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-worldtour-band.html.po
@@ -3,33 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 01:46+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 21:35+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/homepage-worldtour-band.html:7
-#, fuzzy
 msgid "Quarkus World Tour 2021"
-msgstr "クオークスワールドツアー2021"
+msgstr "Quarkus World Tour 2021"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/homepage-worldtour-band.html:8
-#, fuzzy
 msgid "A virtual tour of Java User Groups creating a unique hands-on experience with access to Quarkus experts designed to help you get started with Java in a Kubernetes world."
-msgstr "Java User Groupsのバーチャルツアーでは、Kubernetesの世界でJavaを使い始めるのに役立つように設計されたQuarkusのエキスパートにアクセスできるユニークなハンズオン体験を作成しています。"
+msgstr "Java User Groupsのバーチャルツアーでは、Kubernetesの世界でJavaを使い始めるのに役立つように設計され、Quarkusのエキスパートにアクセスできるユニークなハンズオン体験を用意しています。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/homepage-worldtour-band.html:9
-#, fuzzy
 msgid "<a href=\"/worldtour/\">World Tour stop schedule and information</a>"
-msgstr "&lt;a href=\"/worldtour/\"&gt;ワールドツアーの開催スケジュールと情報&lt;/a"
+msgstr "<a href=\"/worldtour/\">ワールドツアー開催スケジュールと情報</a>"
