--- a/l10n/po/ja_JP/_includes/standards.html.po
+++ b/l10n/po/ja_JP/_includes/standards.html.po
@@ -3,33 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 01:46+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 21:39+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/standards.html:7
-#, fuzzy
 msgid "We don’t want you to spend hours learning new technologies. Instead, the Quarkus programming model builds on top of proven standards. Be it official standards such as Eclipse MicroProfile or leading frameworks in a specific domain such as Eclipse Vert.x."
-msgstr "Quarkusでは、新しい技術の習得に何時間も費やす必要はありません。その代わり、Quarkusのプログラミングモデルは、実績のある標準の上に構築されています。それは、Eclipse MicroProfileのような公式の標準であったり、Eclipse Vert.xのような特定の領域における主要なフレームワークであったりします。"
+msgstr "Quarkusでは、新しい技術の習得に何時間も費やす必要はありません。その代わり、Quarkusのプログラミングモデルは、実績のある標準規格の上に構築されています。それは、Eclipse MicroProfileのような公式の標準であったり、Eclipse Vert.xのような特定の領域における主要なフレームワークであったりします。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/standards.html:8
-#, fuzzy
 msgid "Our dependency injection solution is based on CDI. You can use JAX-RS annotations to define the REST endpoints. You can use JPA annotations to map your persistent entities and JTA annotations to declare the transaction boundaries. You can use Eclipse MicroProfile to configure and monitor your application. You can use Vert.x, Apache Camel and we support much more."
-msgstr "当社の依存性注入ソリューションは、CDIに基づいています。RESTエンドポイントを定義するためにJAX-RSアノテーションを使用することができます。JPAアノテーションを使用して永続エンティティをマッピングし、JTAアノテーションを使用してトランザクション境界を宣言することができます。Eclipse MicroProfileを使用して、アプリケーションの設定と監視を行うことができます。また、Vert.x、Apache Camelを使用することができ、さらに多くの機能をサポートしています。"
+msgstr "我々の依存性注入ソリューションは、CDIに基づいています。RESTエンドポイントを定義するためにJAX-RSアノテーションを使用することができます。JPAアノテーションを使用して永続エンティティをマッピングし、JTAアノテーションを使用してトランザクション境界を宣言することができます。Eclipse MicroProfileを使用して、アプリケーションの設定と監視を行うことができます。また、Vert.x、Apache Camelを使用することができ、さらに多くの機能をサポートしています。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/standards.html:9
-#, fuzzy
 msgid "Since we’re not limited to standards we can go beyond and extend your possibilities. Of course, Quarkus is not a passive consumer. Our goal is to improve and innovate the technologies we use and contribute back to the open source projects and standards we rely on."
-msgstr "規格に縛られていないので、超えて可能性を広げることができます。もちろん、Quarkusは受動的な消費者ではありません。Quarkusの目標は、使用しているテクノロジーを改善して革新し、信頼しているオープンソースプロジェクトや標準に貢献することです。"
+msgstr "標準規格に縛られていないので、超えて可能性を広げることができます。もちろん、Quarkusは受動的な消費者ではありません。Quarkusの目標は、使用しているテクノロジーを改善して革新し、信頼しているオープンソースプロジェクトや標準規格に貢献することです。"
