--- a/l10n/po/ja_JP/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-06 15:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-14 23:00+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Configuring Podman for Quarkus Dev Services and Testcontainers on Linux'\n"
@@ -44,13 +44,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:13
-#, fuzzy
 msgid "Podman is a daemonless container engine for developing, managing, and running Containers on Linux systems. Since the release of version 3, Podman allows the user to run a service emulating a Docker API provided on a Unix socket. This makes it possible for Testcontainers and Quarkus Dev Services to be utilized with Podman."
 msgstr "Podmanは、Linuxシステム上でコンテナを開発、管理、実行するためのデーモンレスのコンテナエンジンです。バージョン3のリリース以降、PodmanはUnixソケット上で提供されるDocker APIをエミュレートするサービスを実行できるようになりました。これにより、TestcontainersやQuarkus Dev ServicesをPodmanで利用することができるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:15
-#, fuzzy
 msgid "Directions in this article will not work on macOS and Microsoft Windows."
 msgstr "この記事に記載されている方法は、macOSおよびMicrosoft Windowsでは使用できません。"
 
@@ -62,21 +60,18 @@ msgstr "要件"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:19
-#, fuzzy
 msgid "Running on a Linux system with Podman 3.x installed."
-msgstr "Podman 3.xがインストールされたLinuxシステム上で動作。"
+msgstr "Podman 3.xがインストールされたLinuxシステム上であること"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:20
-#, fuzzy
 msgid "`podman-docker` installed to emulate the Docker CLI for Quarkus Dev Services."
-msgstr "`podman-docker` Quarkus Dev ServicesのDocker CLIをエミュレートするためにインストールしました。"
+msgstr "Quarkus Dev ServicesのDocker CLIをエミュレートするために `podman-docker` がインストールされていること"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:21
-#, fuzzy
 msgid "(optional) `podman-remote` installed for verification steps."
-msgstr "(オプション) `podman-remote` 検証ステップのためにインストールされています。"
+msgstr "(オプション) 検証ステップのために `podman-remote` がインストールされていること"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:22
@@ -92,7 +87,6 @@ msgstr "詳細な説明"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:28
-#, fuzzy
 msgid "The following commands will set up Podman and environment variables up to work with Quarkus Dev Services and Testcontainers:"
 msgstr "以下のコマンドは、Quarkus Dev ServicesとTestcontainersで動作するようにPodmanと環境変数をセットアップします。"
 
@@ -112,25 +106,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:42
-#, fuzzy
 msgid "What this configuration does is explained below, along with basic troubleshooting."
 msgstr "この設定で何ができるのか、基本的なトラブルシューティングも含めて説明します。"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:43
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring the Podman service"
 msgstr "Podmanサービスの設定"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:48
-#, fuzzy
 msgid "Podman is a daemonless container engine. Quarkus Dev Services and Testcontainers expect a running Docker daemon listening at a Unix socket. Since version 3, Podman can be configured to create a service listening at a Unix socket and this service can be used with Dev Services and Testcontainers."
 msgstr "Podmanは、デーモンレスのコンテナエンジンです。QuarkusのDev ServicesとTestcontainersは、Unixソケットで待ち受ける稼働中のDockerデーモンを期待しています。バージョン3以降では、Unixソケットをリッスンするサービスを作成するようにPodmanを設定することができ、このサービスをDev ServicesやTestcontainersで使用することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:52
-#, fuzzy
 msgid "By convention, the Docker clients attempt to connect to the service specified by URL configured in the `DOCKER_HOST` environment variable, so this variable needs to be configured to point to the Unix socket that the Podman service will be listening on:"
 msgstr "通常、Dockerクライアントは、 `DOCKER_HOST` 環境変数で設定されたURLで指定されたサービスに接続しようとするため、この変数は、PodmanサービスがリッスンするUnixソケットを指すように設定する必要があります。"
 
@@ -143,37 +134,31 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:62
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:113
-#, fuzzy
 msgid "This setting will only apply to the current terminal session. To make this configuration persistent, add the line to the profile files of your shell (e.g. `~/.profile`)."
 msgstr "この設定は、現在のターミナルセッションにのみ適用されます。この設定を持続させるには、シェルのプロファイルファイルにこの行を追加してください（例： `~/.profile` ）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:68
-#, fuzzy
 msgid "Testcontainers and Quarkus Dev Services also expect the container service they make requests against to be non-interactive. In case you have multiple registries configured in your Docker or Podman configuration, Podman responds with a prompt asking which registry should be used to pull containers from in case the containers pulled are specified by short name."
-msgstr "TestcontainersとQuarkus Dev Servicesも、リクエストするコンテナサービスが非インタラクティブであることを期待しています。DockerまたはPodmanの設定で複数のレジストリを構成している場合、Podmanは、引き出したコンテナがショートネームで指定されている場合、どのレジストリを使ってコンテナを引き出すべきかを尋ねるプロンプトで応答します。"
+msgstr "TestcontainersとQuarkus Dev Servicesも、リクエストするコンテナサービスが非インタラクティブであることを期待しています。DockerまたはPodmanの設定で複数のレジストリを構成している場合、Podmanは、pullするコンテナが短縮名で指定されている場合、どのレジストリを使ってコンテナを引き出すべきかを尋ねるプロンプトで応答します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:71
-#, fuzzy
 msgid "You can disable this prompt by setting the `short-name-mode=\"disabled\"` configuration property of Podman in `/etc/containers/registries.conf`."
-msgstr "`short-name-mode=\"disabled\"` このプロンプトを無効にするには、 `/etc/containers/registries.conf` の Podman の構成プロパティを設定します。"
+msgstr "このプロンプトを無効にするには、 `/etc/containers/registries.conf` の Podman の設定プロパティに `short-name-mode=\"disabled\"` を設定します。"
 
 #. type: delimited block =
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:76
-#, fuzzy
 msgid "This setting is security sensitive. Please see https://www.redhat.com/sysadmin/container-image-short-names[Container image short names in Podman] before changing this setting."
-msgstr "この設定はセキュリティ上重要です。この設定を変更する前に、 link:https://www.redhat.com/sysadmin/container-image-short-names[PodmanのContainer image short names]をご覧ください。"
+msgstr "この設定はセキュリティ上重要です。この設定を変更する前に、 link:https://www.redhat.com/sysadmin/container-image-short-names[Podmanのコンテナイメージ短縮名]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:80
-#, fuzzy
 msgid "Finally, let's start the Podman service listening on the socket previously specified by the `DOCKER_HOST` environment variable."
-msgstr "最後に、環境変数「 `DOCKER_HOST` 」で指定したソケットをリッスンするPodmanサービスを起動してみましょう。"
+msgstr "最後に、環境変数 `DOCKER_HOST` で指定したソケットをリッスンするPodmanサービスを起動してみましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:86
-#, fuzzy
 msgid "Podman is distributed with user-local systemd units on `apt` and `dnf` package managers configured to run a rootless Podman service. This means that the Podman process will be launched only with the privileges of the user you are logged in as, that the containers and configuration are stored in your home directory and that this service listens at `unix:///run/user/$\\{UID\\}/podman/podman.sock`. In most of the Linux distributions, you can enable this service with the following command:"
 msgstr "Podmanは、ルートレスのPodmanサービスを実行するように構成された `apt` 、 `dnf` パッケージマネージャ上のユーザーローカルのsystemdユニットとともに配布されます。これは、ログインしているユーザーの権限でのみPodmanプロセスが起動し、コンテナと設定がホームディレクトリに保存され、このサービスが `unix:///run/user/${UID}/podman/podman.sock` をリッスンすることを意味します。ほとんどのLinuxディストリビューションでは、以下のコマンドでこのサービスを有効にすることができます。"
 
@@ -185,7 +170,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:94
-#, fuzzy
 msgid "You can verify that the container service is really running and responding at the URI specified by `DOCKER_HOST` with `podman-remote`."
 msgstr "`DOCKER_HOST` で指定した URI でコンテナサービスが実際に動作し、応答していることを `podman-remote` で確認することができます。"
 
@@ -197,7 +181,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:103
-#, fuzzy
 msgid "Podman's support for Ryuk container is currently flaky. Ryuk is a container that Testcontainers uses to clean up any containers spawned by Testcontainers after the end of their usage in Java code. You can configure Testcontainers not to use Ryuk."
 msgstr "PodmanのRyukコンテナのサポートは現在、不安定です。Ryukは、TestcontainersがJavaコードでの使用終了後に、Testcontainersによって生成されたコンテナをクリーンアップするために使用するコンテナです。Ryukを使用しないようにTestcontainersを設定することができます。"
 
@@ -209,31 +192,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:118
-#, fuzzy
 msgid "Podman is now available to respond to the Java Docker client used in Testcontainers. Please note that the Quarkus Dev Services require that a `docker` command is available on `PATH`. The `podman-docker` package on Linux distributions provides a Docker CLI emulation layer for Podman."
 msgstr "Testcontainersで使用されているJava Dockerクライアントに対応したPodmanが利用可能になりました。なお、Quarkus Dev Servicesでは、 `docker` コマンドが `PATH` で利用可能であることが必要です。Linuxディストリビューションの `podman-docker` パッケージは、Podman用のDocker CLIエミュレーションレイヤーを提供しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:120
-#, fuzzy
 msgid "The future releases of Quarkus will remove the expectation for `docker` command available on `PATH`."
-msgstr "今後のQuarkusのリリースでは、 `docker` コマンドが `PATH` で利用できるようになる予定です。"
+msgstr "今後のQuarkusのリリースでは、 `docker` コマンドが `PATH` で利用できることへの依存がなくなる予定です。"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:121
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Migrating from Docker"
 msgstr "Dockerからの移行"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:125
-#, fuzzy
 msgid "If you have previously been running Docker on a version that did not support cgroups V2 on modern Linux distributions, a workaround setting the cgroups to V1 had to be enabled. This applied for Docker versions older than 19, included."
-msgstr "最近のLinuxディストリビューションでcgroups V2をサポートしていないバージョンでDockerを実行していた場合、cgroupsをV1に設定する回避策を有効にする必要がありました。これは、19より古いDockerのバージョンに適用され、含まれています。"
+msgstr "モダンなLinuxディストリビューションでcgroups V2をサポートしていないバージョンのDockerを実行していた場合、cgroupsをV1に設定する回避策を有効にする必要がありました。これは、19以前のDockerのバージョンが当てはまります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:127
-#, fuzzy
 msgid "You can check whether the workaround has been previously applied to your system with the following command:"
 msgstr "回避策が以前にシステムに適用されているかどうかは、次のコマンドで確認できます。"
 
@@ -245,7 +224,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:135
-#, fuzzy
 msgid "If the output is present, this means that kernel argument to set cgroups to V1 has been applied. You can remove the kernel argument with the following command, re-enabling cgroups V2:"
 msgstr "この出力があれば、cgroups を V1 に設定するカーネル引数が適用されたことを意味します。次のコマンドでカーネル引数を削除し、cgroups V2を再び有効にすることができます。"
 
@@ -257,6 +235,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:141
-#, fuzzy
 msgid "This setting will only take effect after a reboot."
 msgstr "この設定は、再起動後にのみ有効になります。"
