--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-transaction-manager-transaction-manager-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-transaction-manager-transaction-manager-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2022-01-28 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -87,7 +87,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-transaction-manager-transaction-manager-configuration.adoc:30
 #, no-wrap
-msgid "`60`"
+msgid "`60S`"
 msgstr ""
 
 #. type: Table
