--- a/l10n/po/ja_JP/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-01-20 16:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-02-02 15:54+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.6.3.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.6.3.Final released - Maintenance release'\n"
+"title: 'Quarkus 2.6.3.Final リリース - メンテナンスリリース'\n"
 "date: 2022-01-20\n"
 "tags: release\n"
 "synopsis: 2.6.3.Finalは、2.6リリーストレインの3回目のメンテナンスリリースです。\n"
@@ -44,15 +44,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:11
-#, fuzzy
 msgid "We just released Quarkus 2.6.3.Final with a new round of bugfixes and documentation improvements."
-msgstr "Quarkus 2.6.3.Finalがリリースされました。新しいバグフィックスとドキュメントの改善が行われています。"
+msgstr "Quarkus 2.6.3.Finalがリリースされました。バグフィックスとドキュメントの改善が行われています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.6."
-msgstr "すでに2.6をお使いの方も安心してアップグレードできます。"
+msgstr "これは、すでに2.6を使用している人にとって安全なアップグレードです。"
 
 #. type: Title ==
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:14
@@ -67,9 +65,8 @@ msgstr "まだ2.6を使用していない場合は、 link:https://github.com/qu
 
 #. type: Plain text
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.6.3.Final[the full changelog of 2.6.3.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.3.Final[2.6.3.Finalの全変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.3.Final[2.6.3.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc:20
