--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-jib-jib-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-jib-jib-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-05 02:12+0000\n"
+"POT-Creation-Date: 2022-02-07 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -226,6 +226,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:112
 #: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:148
+#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:166
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -326,6 +327,24 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:165
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-jib-jib-config_quarkus.jib.use-current-timestamp]]`link:#quarkus-jib-jib-config_quarkus.jib.use-current-timestamp[quarkus.jib.use-current-timestamp]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether to set the creation time to the actual build time. Otherwise, the creation time will be set to the Unix epoch (00:00:00, January 1st, 1970 in UTC). See link:https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#why-is-my-image-created-48-years-ago[Jib FAQ] for more information\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:169
+#, no-wrap
+msgid "`true`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:174
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-jib-jib-config_quarkus.jib.environment-variables-environment-variables]]`link:#quarkus-jib-jib-config_quarkus.jib.environment-variables-environment-variables[quarkus.jib.environment-variables]`\n"
 "\n"
 "[.description]\n"
@@ -335,7 +354,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:166
+#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:175
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
