--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-jib.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-jib.adoc.po
@@ -339,7 +339,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-container-image-jib.adoc:169
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-container-image-jib.adoc:174
